[ADDED] Model wireframe drawing

--- a/cpu_rasterizer/cpu_rasterizer.vcxproj
+++ b/cpu_rasterizer/cpu_rasterizer.vcxproj
@@ -147,10 +147,16 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="App.cpp" />
+    <ClCompile Include="DotObjModel.cpp" />
+    <ClCompile Include="Image.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="App.h" />
+    <ClInclude Include="DotObjModel.h" />
+    <ClInclude Include="Image.h" />
+    <ClInclude Include="Math.h" />
+    <ClInclude Include="Utils.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
